parsing/y.output
   0  $accept : PROGRAM $end

   1  PROGRAM : translation_unit

   2  primary_expression : IDENTIFIER
   3                     | CONSTANT
   4                     | STRING_LITERAL
   5                     | '(' expression ')'

   6  postfix_expression : primary_expression
   7                     | postfix_expression '[' expression ']'
   8                     | postfix_expression '(' argument_expression_list_opt ')'
   9                     | postfix_expression '.' IDENTIFIER
  10                     | postfix_expression ARROW IDENTIFIER
  11                     | postfix_expression INCREMENT
  12                     | postfix_expression DECREMENT
  13                     | '(' type_name ')' '{' initializer_list '}'
  14                     | '(' type_name ')' '{' initializer_list ',' '}'

  15  argument_expression_list : assignment_expression
  16                           | argument_expression_list ',' assignment_expression

  17  argument_expression_list_opt :
  18                               | argument_expression_list

  19  unary_expression : postfix_expression
  20                   | INCREMENT unary_expression
  21                   | DECREMENT unary_expression
  22                   | unary_operator cast_expression
  23                   | SIZEOF unary_expression
  24                   | SIZEOF '(' type_name ')'

  25  unary_operator : '&'
  26                 | '*'
  27                 | '+'
  28                 | '-'
  29                 | '~'
  30                 | '!'

  31  cast_expression : unary_expression
  32                  | '(' type_name ')' cast_expression

  33  multiplicative_expression : cast_expression
  34                            | multiplicative_expression '*' cast_expression
  35                            | multiplicative_expression '/' cast_expression
  36                            | multiplicative_expression '%' cast_expression

  37  additive_expression : multiplicative_expression
  38                      | additive_expression '+' multiplicative_expression
  39                      | additive_expression '-' multiplicative_expression

  40  shift_expression : additive_expression
  41                   | shift_expression LEFT_SHIFT additive_expression
  42                   | shift_expression RIGHT_SHIFT additive_expression

  43  relational_expression : shift_expression
  44                        | relational_expression '<' shift_expression
  45                        | relational_expression '>' shift_expression
  46                        | relational_expression LESS_THAN_EQUAL shift_expression
  47                        | relational_expression GREATER_THAN_EQUAL shift_expression

  48  equality_expression : relational_expression
  49                      | equality_expression EQUAL relational_expression
  50                      | equality_expression NOT_EQUAL relational_expression

  51  AND_expression : equality_expression
  52                 | AND_expression '&' equality_expression

  53  exclusive_OR_expression : AND_expression
  54                          | exclusive_OR_expression '^' AND_expression

  55  inclusive_OR_expression : exclusive_OR_expression
  56                          | inclusive_OR_expression '|' exclusive_OR_expression

  57  logical_AND_expression : inclusive_OR_expression
  58                         | logical_AND_expression LOGICAL_AND inclusive_OR_expression

  59  logical_OR_expression : logical_AND_expression
  60                        | logical_OR_expression LOGICAL_OR logical_AND_expression

  61  conditional_expression : logical_OR_expression
  62                         | logical_OR_expression '?' expression ':' conditional_expression

  63  assignment_expression : conditional_expression
  64                        | unary_expression assignment_operator assignment_expression

  65  assignment_expression_opt :
  66                            | assignment_expression

  67  assignment_operator : '='
  68                      | MULTIPLY_ASSIGNMENT
  69                      | DIVIDE_ASSIGNMENT
  70                      | MOD_ASSIGNMENT
  71                      | ADD_ASSIGNMENT
  72                      | SUBTRACT_ASSIGNMENT
  73                      | LEFT_SHIFT_ASSIGNMENT
  74                      | RIGHT_SHIFT_ASSIGNMENT
  75                      | BITWISE_AND_ASSIGNMENT
  76                      | BITWISE_XOR_ASSIGNMENT
  77                      | BITWISE_OR_ASSIGNMENT

  78  expression : assignment_expression
  79             | expression ',' assignment_expression

  80  expression_opt :
  81                 | expression

  82  constant_expression : conditional_expression

  83  declaration : declaration_specifiers init_declarator_list_opt ';'

  84  declaration_specifiers : storage_class_specifier declaration_specifiers_opt
  85                         | type_specifier declaration_specifiers_opt
  86                         | type_qualifier declaration_specifiers_opt
  87                         | function_specifier declaration_specifiers_opt

  88  declaration_specifiers_opt :
  89                             | declaration_specifiers

  90  init_declarator_list_opt :
  91                           | init_declarator_list

  92  init_declarator_list : init_declarator
  93                       | init_declarator_list ',' init_declarator

  94  init_declarator : declarator
  95                  | declarator '=' initializer

  96  storage_class_specifier : EXTERN
  97                          | STATIC
  98                          | AUTO
  99                          | REGISTER

 100  type_specifier : VOID
 101                 | CHAR
 102                 | SHORT
 103                 | INT
 104                 | LONG
 105                 | FLOAT
 106                 | DOUBLE
 107                 | SIGNED
 108                 | UNSIGNED
 109                 | BOOL
 110                 | COMPLEX
 111                 | IMAGINARY

 112  specifier_qualifier_list : type_specifier specifier_qualifier_list_opt
 113                           | type_qualifier specifier_qualifier_list_opt

 114  specifier_qualifier_list_opt :
 115                               | specifier_qualifier_list

 116  type_qualifier : CONST
 117                 | RESTRICT
 118                 | VOLATILE

 119  function_specifier : INLINE

 120  declarator : pointer_opt direct_declarator

 121  direct_declarator : IDENTIFIER
 122                    | '(' declarator ')'
 123                    | direct_declarator '[' type_qualifier_list_opt assignment_expression_opt ']'
 124                    | direct_declarator '[' STATIC type_qualifier_list_opt assignment_expression ']'
 125                    | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
 126                    | direct_declarator '[' type_qualifier_list_opt '*' ']'
 127                    | direct_declarator '(' parameter_type_list ')'
 128                    | direct_declarator '(' identifier_list_opt ')'

 129  pointer : '*' type_qualifier_list_opt
 130          | '*' type_qualifier_list_opt pointer

 131  pointer_opt :
 132              | pointer

 133  type_qualifier_list : type_qualifier
 134                      | type_qualifier_list type_qualifier

 135  type_qualifier_list_opt :
 136                          | type_qualifier_list

 137  parameter_type_list : parameter_list
 138                      | parameter_list ',' ELLIPSIS

 139  parameter_list : parameter_declaration
 140                 | parameter_list ',' parameter_declaration

 141  parameter_declaration : declaration_specifiers declarator
 142                        | declaration_specifiers

 143  identifier_list : IDENTIFIER
 144                  | identifier_list ',' IDENTIFIER

 145  identifier_list_opt :
 146                      | identifier_list

 147  type_name : specifier_qualifier_list

 148  initializer : assignment_expression
 149              | '{' initializer_list '}'
 150              | '{' initializer_list ',' '}'

 151  initializer_list : designation_opt initializer
 152                   | initializer_list ',' designation_opt initializer

 153  designation : designator_list '='

 154  designation_opt :
 155                  | designation

 156  designator_list : designator
 157                  | designator_list designator

 158  designator : '[' constant_expression ']'
 159             | '.' IDENTIFIER

 160  statement : labeled_statement
 161            | expression_statement
 162            | compound_statement
 163            | selection_statement
 164            | iteration_statement
 165            | jump_statement

 166  labeled_statement : IDENTIFIER ':' statement
 167                    | CASE constant_expression ':' statement
 168                    | DEFAULT ':' statement

 169  compound_statement : '{' block_item_list_opt '}'

 170  block_item_list_opt :
 171                      | block_item_list

 172  block_item_list : block_item
 173                  | block_item_list block_item

 174  block_item : declaration
 175             | statement

 176  expression_statement : expression_opt ';'

 177  selection_statement : IF '(' expression ')' statement
 178                      | IF '(' expression ')' statement ELSE statement
 179                      | SWITCH '(' expression ')' statement

 180  iteration_statement : WHILE '(' expression ')' statement
 181                      | DO statement WHILE '(' expression ')' ';'
 182                      | FOR '(' expression_opt ';' expression_opt ';' expression_opt ')' statement
 183                      | FOR '(' declaration expression_opt ';' expression_opt ')' statement

 184  jump_statement : GOTO IDENTIFIER ';'
 185                 | CONTINUE ';'
 186                 | BREAK ';'
 187                 | RETURN expression_opt ';'

 188  translation_unit : external_declaration
 189                   | translation_unit external_declaration

 190  external_declaration : function_definition
 191                       | declaration

 192  function_definition : declaration_specifiers declarator declaration_list_opt compound_statement

 193  declaration_list : declaration
 194                   | declaration_list declaration

 195  declaration_list_opt :
 196                       | declaration_list

state 0
	$accept : . PROGRAM $end  (0)

	AUTO  shift 1
	CHAR  shift 2
	CONST  shift 3
	DOUBLE  shift 4
	EXTERN  shift 5
	FLOAT  shift 6
	INLINE  shift 7
	INT  shift 8
	LONG  shift 9
	REGISTER  shift 10
	RESTRICT  shift 11
	SHORT  shift 12
	SIGNED  shift 13
	STATIC  shift 14
	UNSIGNED  shift 15
	VOID  shift 16
	VOLATILE  shift 17
	BOOL  shift 18
	COMPLEX  shift 19
	IMAGINARY  shift 20
	.  error

	PROGRAM  goto 21
	declaration  goto 22
	declaration_specifiers  goto 23
	storage_class_specifier  goto 24
	type_specifier  goto 25
	type_qualifier  goto 26
	function_specifier  goto 27
	translation_unit  goto 28
	external_declaration  goto 29
	function_definition  goto 30


state 1
	storage_class_specifier : AUTO .  (98)

	.  reduce 98


state 2
	type_specifier : CHAR .  (101)

	.  reduce 101


state 3
	type_qualifier : CONST .  (116)

	.  reduce 116


state 4
	type_specifier : DOUBLE .  (106)

	.  reduce 106


state 5
	storage_class_specifier : EXTERN .  (96)

	.  reduce 96


state 6
	type_specifier : FLOAT .  (105)

	.  reduce 105


state 7
	function_specifier : INLINE .  (119)

	.  reduce 119


state 8
	type_specifier : INT .  (103)

	.  reduce 103


state 9
	type_specifier : LONG .  (104)

	.  reduce 104


state 10
	storage_class_specifier : REGISTER .  (99)

	.  reduce 99


state 11
	type_qualifier : RESTRICT .  (117)

	.  reduce 117


state 12
	type_specifier : SHORT .  (102)

	.  reduce 102


state 13
	type_specifier : SIGNED .  (107)

	.  reduce 107


state 14
	storage_class_specifier : STATIC .  (97)

	.  reduce 97


state 15
	type_specifier : UNSIGNED .  (108)

	.  reduce 108


state 16
	type_specifier : VOID .  (100)

	.  reduce 100


state 17
	type_qualifier : VOLATILE .  (118)

	.  reduce 118


state 18
	type_specifier : BOOL .  (109)

	.  reduce 109


state 19
	type_specifier : COMPLEX .  (110)

	.  reduce 110


state 20
	type_specifier : IMAGINARY .  (111)

	.  reduce 111


state 21
	$accept : PROGRAM . $end  (0)

	$end  accept


state 22
	external_declaration : declaration .  (191)

	.  reduce 191


state 23
	declaration : declaration_specifiers . init_declarator_list_opt ';'  (83)
	function_definition : declaration_specifiers . declarator declaration_list_opt compound_statement  (192)
	init_declarator_list_opt : .  (90)
	pointer_opt : .  (131)

	'*'  shift 31
	IDENTIFIER  reduce 131
	'('  reduce 131
	';'  reduce 90

	init_declarator_list  goto 32
	init_declarator_list_opt  goto 33
	init_declarator  goto 34
	declarator  goto 35
	pointer  goto 36
	pointer_opt  goto 37


state 24
	declaration_specifiers : storage_class_specifier . declaration_specifiers_opt  (84)
	declaration_specifiers_opt : .  (88)

	AUTO  shift 1
	CHAR  shift 2
	CONST  shift 3
	DOUBLE  shift 4
	EXTERN  shift 5
	FLOAT  shift 6
	INLINE  shift 7
	INT  shift 8
	LONG  shift 9
	REGISTER  shift 10
	RESTRICT  shift 11
	SHORT  shift 12
	SIGNED  shift 13
	STATIC  shift 14
	UNSIGNED  shift 15
	VOID  shift 16
	VOLATILE  shift 17
	BOOL  shift 18
	COMPLEX  shift 19
	IMAGINARY  shift 20
	IDENTIFIER  reduce 88
	'('  reduce 88
	')'  reduce 88
	','  reduce 88
	'*'  reduce 88
	';'  reduce 88

	declaration_specifiers  goto 38
	declaration_specifiers_opt  goto 39
	storage_class_specifier  goto 24
	type_specifier  goto 25
	type_qualifier  goto 26
	function_specifier  goto 27


state 25
	declaration_specifiers : type_specifier . declaration_specifiers_opt  (85)
	declaration_specifiers_opt : .  (88)

	AUTO  shift 1
	CHAR  shift 2
	CONST  shift 3
	DOUBLE  shift 4
	EXTERN  shift 5
	FLOAT  shift 6
	INLINE  shift 7
	INT  shift 8
	LONG  shift 9
	REGISTER  shift 10
	RESTRICT  shift 11
	SHORT  shift 12
	SIGNED  shift 13
	STATIC  shift 14
	UNSIGNED  shift 15
	VOID  shift 16
	VOLATILE  shift 17
	BOOL  shift 18
	COMPLEX  shift 19
	IMAGINARY  shift 20
	IDENTIFIER  reduce 88
	'('  reduce 88
	')'  reduce 88
	','  reduce 88
	'*'  reduce 88
	';'  reduce 88

	declaration_specifiers  goto 38
	declaration_specifiers_opt  goto 40
	storage_class_specifier  goto 24
	type_specifier  goto 25
	type_qualifier  goto 26
	function_specifier  goto 27


state 26
	declaration_specifiers : type_qualifier . declaration_specifiers_opt  (86)
	declaration_specifiers_opt : .  (88)

	AUTO  shift 1
	CHAR  shift 2
	CONST  shift 3
	DOUBLE  shift 4
	EXTERN  shift 5
	FLOAT  shift 6
	INLINE  shift 7
	INT  shift 8
	LONG  shift 9
	REGISTER  shift 10
	RESTRICT  shift 11
	SHORT  shift 12
	SIGNED  shift 13
	STATIC  shift 14
	UNSIGNED  shift 15
	VOID  shift 16
	VOLATILE  shift 17
	BOOL  shift 18
	COMPLEX  shift 19
	IMAGINARY  shift 20
	IDENTIFIER  reduce 88
	'('  reduce 88
	')'  reduce 88
	','  reduce 88
	'*'  reduce 88
	';'  reduce 88

	declaration_specifiers  goto 38
	declaration_specifiers_opt  goto 41
	storage_class_specifier  goto 24
	type_specifier  goto 25
	type_qualifier  goto 26
	function_specifier  goto 27


state 27
	declaration_specifiers : function_specifier . declaration_specifiers_opt  (87)
	declaration_specifiers_opt : .  (88)

	AUTO  shift 1
	CHAR  shift 2
	CONST  shift 3
	DOUBLE  shift 4
	EXTERN  shift 5
	FLOAT  shift 6
	INLINE  shift 7
	INT  shift 8
	LONG  shift 9
	REGISTER  shift 10
	RESTRICT  shift 11
	SHORT  shift 12
	SIGNED  shift 13
	STATIC  shift 14
	UNSIGNED  shift 15
	VOID  shift 16
	VOLATILE  shift 17
	BOOL  shift 18
	COMPLEX  shift 19
	IMAGINARY  shift 20
	IDENTIFIER  reduce 88
	'('  reduce 88
	')'  reduce 88
	','  reduce 88
	'*'  reduce 88
	';'  reduce 88

	declaration_specifiers  goto 38
	declaration_specifiers_opt  goto 42
	storage_class_specifier  goto 24
	type_specifier  goto 25
	type_qualifier  goto 26
	function_specifier  goto 27


state 28
	PROGRAM : translation_unit .  (1)
	translation_unit : translation_unit . external_declaration  (189)

	AUTO  shift 1
	CHAR  shift 2
	CONST  shift 3
	DOUBLE  shift 4
	EXTERN  shift 5
	FLOAT  shift 6
	INLINE  shift 7
	INT  shift 8
	LONG  shift 9
	REGISTER  shift 10
	RESTRICT  shift 11
	SHORT  shift 12
	SIGNED  shift 13
	STATIC  shift 14
	UNSIGNED  shift 15
	VOID  shift 16
	VOLATILE  shift 17
	BOOL  shift 18
	COMPLEX  shift 19
	IMAGINARY  shift 20
	$end  reduce 1

	declaration  goto 22
	declaration_specifiers  goto 23
	storage_class_specifier  goto 24
	type_specifier  goto 25
	type_qualifier  goto 26
	function_specifier  goto 27
	external_declaration  goto 43
	function_definition  goto 30


state 29
	translation_unit : external_declaration .  (188)

	.  reduce 188


state 30
	external_declaration : function_definition .  (190)

	.  reduce 190


state 31
	pointer : '*' . type_qualifier_list_opt  (129)
	pointer : '*' . type_qualifier_list_opt pointer  (130)
	type_qualifier_list_opt : .  (135)

	CONST  shift 3
	RESTRICT  shift 11
	VOLATILE  shift 17
	IDENTIFIER  reduce 135
	'('  reduce 135
	'*'  reduce 135

	type_qualifier  goto 44
	type_qualifier_list  goto 45
	type_qualifier_list_opt  goto 46


state 32
	init_declarator_list_opt : init_declarator_list .  (91)
	init_declarator_list : init_declarator_list . ',' init_declarator  (93)

	','  shift 47
	';'  reduce 91


state 33
	declaration : declaration_specifiers init_declarator_list_opt . ';'  (83)

	';'  shift 48
	.  error


state 34
	init_declarator_list : init_declarator .  (92)

	.  reduce 92


state 35
	init_declarator : declarator .  (94)
	init_declarator : declarator . '=' initializer  (95)
	function_definition : declaration_specifiers declarator . declaration_list_opt compound_statement  (192)
	declaration_list_opt : .  (195)

	AUTO  shift 1
	CHAR  shift 2
	CONST  shift 3
	DOUBLE  shift 4
	EXTERN  shift 5
	FLOAT  shift 6
	INLINE  shift 7
	INT  shift 8
	LONG  shift 9
	REGISTER  shift 10
	RESTRICT  shift 11
	SHORT  shift 12
	SIGNED  shift 13
	STATIC  shift 14
	UNSIGNED  shift 15
	VOID  shift 16
	VOLATILE  shift 17
	BOOL  shift 18
	COMPLEX  shift 19
	IMAGINARY  shift 20
	'='  shift 49
	'{'  reduce 195
	','  reduce 94
	';'  reduce 94

	declaration  goto 50
	declaration_specifiers  goto 51
	storage_class_specifier  goto 24
	type_specifier  goto 25
	type_qualifier  goto 26
	function_specifier  goto 27
	declaration_list  goto 52
	declaration_list_opt  goto 53


state 36
	pointer_opt : pointer .  (132)

	.  reduce 132


state 37
	declarator : pointer_opt . direct_declarator  (120)

	IDENTIFIER  shift 54
	'('  shift 55
	.  error

	direct_declarator  goto 56


state 38
	declaration_specifiers_opt : declaration_specifiers .  (89)

	.  reduce 89


state 39
	declaration_specifiers : storage_class_specifier declaration_specifiers_opt .  (84)

	.  reduce 84


state 40
	declaration_specifiers : type_specifier declaration_specifiers_opt .  (85)

	.  reduce 85


state 41
	declaration_specifiers : type_qualifier declaration_specifiers_opt .  (86)

	.  reduce 86


state 42
	declaration_specifiers : function_specifier declaration_specifiers_opt .  (87)

	.  reduce 87


state 43
	translation_unit : translation_unit external_declaration .  (189)

	.  reduce 189


state 44
	type_qualifier_list : type_qualifier .  (133)

	.  reduce 133


state 45
	type_qualifier_list : type_qualifier_list . type_qualifier  (134)
	type_qualifier_list_opt : type_qualifier_list .  (136)

	CONST  shift 3
	RESTRICT  shift 11
	VOLATILE  shift 17
	INCREMENT  reduce 136
	DECREMENT  reduce 136
	IDENTIFIER  reduce 136
	CONSTANT  reduce 136
	STRING_LITERAL  reduce 136
	SIZEOF  reduce 136
	'('  reduce 136
	'&'  reduce 136
	'*'  reduce 136
	'+'  reduce 136
	'-'  reduce 136
	'~'  reduce 136
	'!'  reduce 136

	type_qualifier  goto 57


state 46
	pointer : '*' type_qualifier_list_opt .  (129)
	pointer : '*' type_qualifier_list_opt . pointer  (130)

	'*'  shift 31
	IDENTIFIER  reduce 129
	'('  reduce 129

	pointer  goto 58


state 47
	init_declarator_list : init_declarator_list ',' . init_declarator  (93)
	pointer_opt : .  (131)

	'*'  shift 31
	IDENTIFIER  reduce 131
	'('  reduce 131

	init_declarator  goto 59
	declarator  goto 60
	pointer  goto 36
	pointer_opt  goto 37


state 48
	declaration : declaration_specifiers init_declarator_list_opt ';' .  (83)

	.  reduce 83


state 49
	init_declarator : declarator '=' . initializer  (95)

	INCREMENT  shift 61
	DECREMENT  shift 62
	IDENTIFIER  shift 63
	CONSTANT  shift 64
	STRING_LITERAL  shift 65
	SIZEOF  shift 66
	'('  shift 67
	'{'  shift 68
	'&'  shift 69
	'*'  shift 70
	'+'  shift 71
	'-'  shift 72
	'~'  shift 73
	'!'  shift 74
	.  error

	primary_expression  goto 75
	postfix_expression  goto 76
	unary_expression  goto 77
	unary_operator  goto 78
	cast_expression  goto 79
	multiplicative_expression  goto 80
	additive_expression  goto 81
	shift_expression  goto 82
	relational_expression  goto 83
	equality_expression  goto 84
	AND_expression  goto 85
	exclusive_OR_expression  goto 86
	inclusive_OR_expression  goto 87
	logical_AND_expression  goto 88
	logical_OR_expression  goto 89
	conditional_expression  goto 90
	assignment_expression  goto 91
	initializer  goto 92


state 50
	declaration_list : declaration .  (193)

	.  reduce 193


state 51
	declaration : declaration_specifiers . init_declarator_list_opt ';'  (83)
	init_declarator_list_opt : .  (90)
	pointer_opt : .  (131)

	'*'  shift 31
	IDENTIFIER  reduce 131
	'('  reduce 131
	';'  reduce 90

	init_declarator_list  goto 32
	init_declarator_list_opt  goto 33
	init_declarator  goto 34
	declarator  goto 60
	pointer  goto 36
	pointer_opt  goto 37


state 52
	declaration_list : declaration_list . declaration  (194)
	declaration_list_opt : declaration_list .  (196)

	AUTO  shift 1
	CHAR  shift 2
	CONST  shift 3
	DOUBLE  shift 4
	EXTERN  shift 5
	FLOAT  shift 6
	INLINE  shift 7
	INT  shift 8
	LONG  shift 9
	REGISTER  shift 10
	RESTRICT  shift 11
	SHORT  shift 12
	SIGNED  shift 13
	STATIC  shift 14
	UNSIGNED  shift 15
	VOID  shift 16
	VOLATILE  shift 17
	BOOL  shift 18
	COMPLEX  shift 19
	IMAGINARY  shift 20
	'{'  reduce 196

	declaration  goto 93
	declaration_specifiers  goto 51
	storage_class_specifier  goto 24
	type_specifier  goto 25
	type_qualifier  goto 26
	function_specifier  goto 27


state 53
	function_definition : declaration_specifiers declarator declaration_list_opt . compound_statement  (192)

	'{'  shift 94
	.  error

	compound_statement  goto 95


state 54
	direct_declarator : IDENTIFIER .  (121)

	.  reduce 121


state 55
	direct_declarator : '(' . declarator ')'  (122)
	pointer_opt : .  (131)

	'*'  shift 31
	IDENTIFIER  reduce 131
	'('  reduce 131

	declarator  goto 96
	pointer  goto 36
	pointer_opt  goto 37


state 56
	declarator : pointer_opt direct_declarator .  (120)
	direct_declarator : direct_declarator . '[' type_qualifier_list_opt assignment_expression_opt ']'  (123)
	direct_declarator : direct_declarator . '[' STATIC type_qualifier_list_opt assignment_expression ']'  (124)
	direct_declarator : direct_declarator . '[' type_qualifier_list STATIC assignment_expression ']'  (125)
	direct_declarator : direct_declarator . '[' type_qualifier_list_opt '*' ']'  (126)
	direct_declarator : direct_declarator . '(' parameter_type_list ')'  (127)
	direct_declarator : direct_declarator . '(' identifier_list_opt ')'  (128)

	'('  shift 97
	'['  shift 98
	AUTO  reduce 120
	CHAR  reduce 120
	CONST  reduce 120
	DOUBLE  reduce 120
	EXTERN  reduce 120
	FLOAT  reduce 120
	INLINE  reduce 120
	INT  reduce 120
	LONG  reduce 120
	REGISTER  reduce 120
	RESTRICT  reduce 120
	SHORT  reduce 120
	SIGNED  reduce 120
	STATIC  reduce 120
	UNSIGNED  reduce 120
	VOID  reduce 120
	VOLATILE  reduce 120
	BOOL  reduce 120
	COMPLEX  reduce 120
	IMAGINARY  reduce 120
	')'  reduce 120
	'{'  reduce 120
	','  reduce 120
	'='  reduce 120
	';'  reduce 120


state 57
	type_qualifier_list : type_qualifier_list type_qualifier .  (134)

	.  reduce 134


state 58
	pointer : '*' type_qualifier_list_opt pointer .  (130)

	.  reduce 130


state 59
	init_declarator_list : init_declarator_list ',' init_declarator .  (93)

	.  reduce 93


state 60
	init_declarator : declarator .  (94)
	init_declarator : declarator . '=' initializer  (95)

	'='  shift 49
	','  reduce 94
	';'  reduce 94


state 61
	unary_expression : INCREMENT . unary_expression  (20)

	INCREMENT  shift 61
	DECREMENT  shift 62
	IDENTIFIER  shift 63
	CONSTANT  shift 64
	STRING_LITERAL  shift 65
	SIZEOF  shift 66
	'('  shift 99
	'&'  shift 69
	'*'  shift 70
	'+'  shift 71
	'-'  shift 72
	'~'  shift 73
	'!'  shift 74
	.  error

	primary_expression  goto 75
	postfix_expression  goto 76
	unary_expression  goto 100
	unary_operator  goto 78


state 62
	unary_expression : DECREMENT . unary_expression  (21)

	INCREMENT  shift 61
	DECREMENT  shift 62
	IDENTIFIER  shift 63
	CONSTANT  shift 64
	STRING_LITERAL  shift 65
	SIZEOF  shift 66
	'('  shift 99
	'&'  shift 69
	'*'  shift 70
	'+'  shift 71
	'-'  shift 72
	'~'  shift 73
	'!'  shift 74
	.  error

	primary_expression  goto 75
	postfix_expression  goto 76
	unary_expression  goto 101
	unary_operator  goto 78


state 63
	primary_expression : IDENTIFIER .  (2)

	.  reduce 2


state 64
	primary_expression : CONSTANT .  (3)

	.  reduce 3


state 65
	primary_expression : STRING_LITERAL .  (4)

	.  reduce 4


state 66
	unary_expression : SIZEOF . unary_expression  (23)
	unary_expression : SIZEOF . '(' type_name ')'  (24)

	INCREMENT  shift 61
	DECREMENT  shift 62
	IDENTIFIER  shift 63
	CONSTANT  shift 64
	STRING_LITERAL  shift 65
	SIZEOF  shift 66
	'('  shift 102
	'&'  shift 69
	'*'  shift 70
	'+'  shift 71
	'-'  shift 72
	'~'  shift 73
	'!'  shift 74
	.  error

	primary_expression  goto 75
	postfix_expression  goto 76
	unary_expression  goto 103
	unary_operator  goto 78


state 67
	primary_expression : '(' . expression ')'  (5)
	postfix_expression : '(' . type_name ')' '{' initializer_list '}'  (13)
	postfix_expression : '(' . type_name ')' '{' initializer_list ',' '}'  (14)
	cast_expression : '(' . type_name ')' cast_expression  (32)

	INCREMENT  shift 61
	DECREMENT  shift 62
	IDENTIFIER  shift 63
	CONSTANT  shift 64
	STRING_LITERAL  shift 65
	CHAR  shift 2
	CONST  shift 3
	DOUBLE  shift 4
	FLOAT  shift 6
	INT  shift 8
	LONG  shift 9
	RESTRICT  shift 11
	SHORT  shift 12
	SIGNED  shift 13
	SIZEOF  shift 66
	UNSIGNED  shift 15
	VOID  shift 16
	VOLATILE  shift 17
	BOOL  shift 18
	COMPLEX  shift 19
	IMAGINARY  shift 20
	'('  shift 67
	'&'  shift 69
	'*'  shift 70
	'+'  shift 71
	'-'  shift 72
	'~'  shift 73
	'!'  shift 74
	.  error

	primary_expression  goto 75
	postfix_expression  goto 76
	unary_expression  goto 77
	unary_operator  goto 78
	cast_expression  goto 79
	multiplicative_expression  goto 80
	additive_expression  goto 81
	shift_expression  goto 82
	relational_expression  goto 83
	equality_expression  goto 84
	AND_expression  goto 85
	exclusive_OR_expression  goto 86
	inclusive_OR_expression  goto 87
	logical_AND_expression  goto 88
	logical_OR_expression  goto 89
	conditional_expression  goto 90
	assignment_expression  goto 104
	expression  goto 105
	type_specifier  goto 106
	specifier_qualifier_list  goto 107
	type_qualifier  goto 108
	type_name  goto 109


state 68
	initializer : '{' . initializer_list '}'  (149)
	initializer : '{' . initializer_list ',' '}'  (150)
	designation_opt : .  (154)

	'['  shift 110
	'.'  shift 111
	INCREMENT  reduce 154
	DECREMENT  reduce 154
	IDENTIFIER  reduce 154
	CONSTANT  reduce 154
	STRING_LITERAL  reduce 154
	SIZEOF  reduce 154
	'('  reduce 154
	'{'  reduce 154
	'&'  reduce 154
	'*'  reduce 154
	'+'  reduce 154
	'-'  reduce 154
	'~'  reduce 154
	'!'  reduce 154

	initializer_list  goto 112
	designation  goto 113
	designation_opt  goto 114
	designator_list  goto 115
	designator  goto 116


state 69
	unary_operator : '&' .  (25)

	.  reduce 25


state 70
	unary_operator : '*' .  (26)

	.  reduce 26


state 71
	unary_operator : '+' .  (27)

	.  reduce 27


state 72
	unary_operator : '-' .  (28)

	.  reduce 28


state 73
	unary_operator : '~' .  (29)

	.  reduce 29


state 74
	unary_operator : '!' .  (30)

	.  reduce 30


state 75
	postfix_expression : primary_expression .  (6)

	.  reduce 6


state 76
	postfix_expression : postfix_expression . '[' expression ']'  (7)
	postfix_expression : postfix_expression . '(' argument_expression_list_opt ')'  (8)
	postfix_expression : postfix_expression . '.' IDENTIFIER  (9)
	postfix_expression : postfix_expression . ARROW IDENTIFIER  (10)
	postfix_expression : postfix_expression . INCREMENT  (11)
	postfix_expression : postfix_expression . DECREMENT  (12)
	unary_expression : postfix_expression .  (19)

	ARROW  shift 117
	INCREMENT  shift 118
	DECREMENT  shift 119
	'('  shift 120
	'['  shift 121
	'.'  shift 122
	LEFT_SHIFT  reduce 19
	RIGHT_SHIFT  reduce 19
	LESS_THAN_EQUAL  reduce 19
	GREATER_THAN_EQUAL  reduce 19
	EQUAL  reduce 19
	NOT_EQUAL  reduce 19
	LOGICAL_AND  reduce 19
	LOGICAL_OR  reduce 19
	MULTIPLY_ASSIGNMENT  reduce 19
	DIVIDE_ASSIGNMENT  reduce 19
	MOD_ASSIGNMENT  reduce 19
	ADD_ASSIGNMENT  reduce 19
	SUBTRACT_ASSIGNMENT  reduce 19
	LEFT_SHIFT_ASSIGNMENT  reduce 19
	RIGHT_SHIFT_ASSIGNMENT  reduce 19
	BITWISE_AND_ASSIGNMENT  reduce 19
	BITWISE_XOR_ASSIGNMENT  reduce 19
	BITWISE_OR_ASSIGNMENT  reduce 19
	')'  reduce 19
	']'  reduce 19
	'}'  reduce 19
	','  reduce 19
	'&'  reduce 19
	'*'  reduce 19
	'+'  reduce 19
	'-'  reduce 19
	'/'  reduce 19
	'%'  reduce 19
	'<'  reduce 19
	'>'  reduce 19
	'^'  reduce 19
	'|'  reduce 19
	'?'  reduce 19
	':'  reduce 19
	'='  reduce 19
	';'  reduce 19


state 77
	cast_expression : unary_expression .  (31)
	assignment_expression : unary_expression . assignment_operator assignment_expression  (64)
